--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,9 @@
     <string name="new_event">New event</string>
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
+    <string name="total">Total</string>
+    <string name="add">Add</string>
+    <string name="cancel">Cancel</string>
+    <string name="name">Name</string>
 
 </resources>
