--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string-array name="drawer_fragment_classes">
         <item>ScanFragment</item>
         <item>EventsFragment</item>
+        <item>UsersFragment</item>
         <item>AboutFragment</item>
     </string-array>
 
@@ -27,5 +28,12 @@
     <string name="add">Add</string>
     <string name="cancel">Cancel</string>
     <string name="name">Name</string>
+    <string name="scan_a_card_to_change_permissions">Scan a card to change user permissions</string>
+    <string name="success">Success</string>
+    <string name="error">Error</string>
+    <string name="users">Users</string>
+    <string name="make_an_admin">Make user an admin</string>
+    <string name="is_now_admin">is now an admin</string>
+    <string name="is_not_admin">is no longer an admin</string>
 
 </resources>
