--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,5 +35,7 @@
     <string name="make_an_admin">Make user an admin</string>
     <string name="is_now_admin">is now an admin</string>
     <string name="is_not_admin">is no longer an admin</string>
+    <string name="tally">Totals</string>
+    <string name="log">Logs</string>
 
 </resources>
