Make sure that record is unique

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,5 +37,6 @@
     <string name="is_not_admin">is no longer an admin</string>
     <string name="tally">Totals</string>
     <string name="log">Logs</string>
+    <string name="already_scanned">Already scanned</string>
 
 </resources>
