Drawer open & close from app icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,7 @@
     <string name="tally">Totals</string>
     <string name="log">Logs</string>
     <string name="already_scanned">Already scanned</string>
+    <string name="drawer_open">Open drawer</string>
+    <string name="drawer_close">Close drawer</string>
 
 </resources>
